# tincr

./: .gitattributes  Cargo.toml  Documentation.md  Parameter.md  PyO3_Beispiel.md  README.md  SK_Atom_Params.md
data/src/: charges.rs  excited_states.rs  gamma_matrices.rs  gradients.rs  mod.rs  orbitals.rs  other.rs  parametrization.rs  storage.rs
data/src/getter/: charges.rs  excited_states.rs  gradients.rs  orbitals.rs
data/src/setter/: charges.rs  energies.rs  excited_states.rs  gradients.rs  orbitals.rs
data/src/taker/: orbitals.rs
dftb/src/: scc_routine.rs  scc_routine_unrestricted.rs
fmo-dftb/src/: coulomb_integrals.rs  fragmentation.rs  helpers.rs  mod.rs  monomer.rs  pair.rs  setup.rs  supersystem.rs
fmo-dftb/src/gradients/: embedding.rs  es_dimer.rs  excited_state.rs  mod.rs  monomer.rs  numerical.rs  pair.rs  response.rs
fmo-dftb/src/lcmo/: basis.rs  ct_gradient.rs  hamiltonian.rs  helpers.rs  integrals.rs  lcmo_trans_charges.rs  mod.rs
fmo-dftb/src/scc/: helpers.rs  logging.rs  mod.rs  monomer.rs  pair.rs  supersystem.rs
not_refactored_tests/initialization/: geometry.rs
not_refactored_tests/param/: gamma_approximation.rs  h0_and_s.rs  parameters.rs
not_refactored_tests/scc/: fermi_occupation.rs  mulliken.rs  scc_routine.rs
param_files/homegrown/repulsive_potentials/: c_n.ron  c_o.ron  h_h.ron  h_o.ron  n_n.ron  o_o.ron
parameters/src/: gamma_approximation.rs  helpers.rs  mod.rs  pseudo_atom.rs  reppot.rs  slako.rs  slako_transformations.rs
src/: SlakoTransformations.rs  broyden.rs  calculator.rs  constants.rs  defaults.rs  diis.rs  driver.rs  fermi_occupation.rs  fmo.rs  fmo_gradients.rs  fmo_ncc_routine.rs  gamma_approximation.rs  gradients.rs  graph.rs  h0_and_s.rs  internal_coordinates.rs  io.rs  io2.rs  main.rs  molecule.rs  molecule2.rs  mulliken.rs  old_gradients.rs  optimization.rs  orbe_derivative.rs  parameters.rs  parametrization.rs  pseudo_atom.rs  scc_routine.rs  scc_routine_unrestricted.rs  slako_transformations.rs  slako_transformations_lmax2.rs  solver.rs  spin_coupling_constants.rs  spline.rs  splrep.rs  step.rs  tda_gradient.rs  test.rs  transition_charges.rs  (+1 more)
src/coupling/: diabatic_overlap.rs  helpers.rs  mod.rs  overlap_ao.rs  overlap_test.rs  scalar_coupling.rs
src/data/: charges.rs  energies.rs  excited_states.rs  gamma_matrices.rs  gradients.rs  mod.rs  orbitals.rs  other.rs  parametrization.rs  storage.rs
src/data/getter/: charges.rs  (+7 more)
src/dispersion/: auxliary_functions.rs  charge.rs  cutoff.rs  damping.rs  data.rs  mod.rs  model.rs  reference.rs  reference_inc.rs  wignerseitz.rs
src/dynamics/: helpers.rs  interface.rs  mod.rs
src/excited_states/: a_and_b.rs  casida.rs  davidson.rs  energies.rs  helpers.rs  helpers_old.rs  krylov.rs  mod.rs  ntos.rs  tda.rs  transition_charges.rs  utils.rs
src/fmo/: coulomb_integrals.rs  fmo_energy.rs  fmo_gradient.rs  fmo_scc.rs  fragment.rs  fragmentation.rs  helpers.rs  mod.rs  monomer.rs  pair.rs  supersystem.rs
src/gradients/: excited_state.rs  grad.rs  ground_state.rs  helpers.rs  mod.rs  numerical.rs
src/initialization/: atom.rs  engine.rs  fragmentation.rs  geometry.rs  helpers.rs  mod.rs  molecule.rs  parameters.rs  parametrization.rs  properties.rs  properties2.rs  property.rs  system.rs
src/io/: basis_set.rs  coordinates.rs  imprint.rs  input.rs  mod.rs  molden.rs  settings.rs
src/optimization/: cartesian.rs  graph.rs  helpers.rs  internal_coordinates.rs  mod.rs  optimization.rs  step.rs
src/param/: elements.rs  gamma_approximation.rs  mod.rs  pseudo_atom.rs  reppot.rs  skf_handler.rs  slako.rs  slako_transformations.rs
src/properties/: base.rs  getter.rs  mod.rs  property.rs  setter.rs  taker.rs
src/scc/: broyden.rs  fermi_occupation.rs  gamma_approximation.rs  h0_and_s.rs  helpers.rs  level_shifting.rs  logging.rs  mod.rs  mulliken.rs  scc_routine.rs  scc_routine_unrestricted.rs
src/utils/: array_helper.rs  mod.rs  tests.rs  zbrent.rs
tests/: solver.rs
tests/utils/: zbrent.rs
tincr-core/: Cargo.toml
tincr-core/src/: constants.rs  defaults.rs  lib.rs
tincr-core/src/excited_states/: casida.rs  energies.rs  mod.rs  ntos.rs  transition_charges.rs  utils.rs
tincr-core/src/excited_states/gradients/: h_operators.rs  mod.rs  vector_products.rs  zvector.rs
tincr-core/src/excited_states/solvers/: davidson.rs  mod.rs  utils.rs
tincr-core/src/excited_states/tda/: mod.rs  moments.rs  monomer.rs  new_mod.rs  system.rs
tincr-core/src/io/: basis_set.rs  coordinates.rs  imprint.rs  input.rs  mod.rs  molden.rs  settings.rs
tincr-core/src/parametrization/: gamma_approximation.rs  helpers.rs  mod.rs  pseudo_atom.rs  reppot.rs  reppot_spline.rs  sk_matrix_elements.rs  skf_handler.rs  slako.rs  slako_spline.rs  slako_transformations.rs
tincr-core/src/scc/: diis.rs  energies.rs  fermi_occupation.rs  hamiltonians.rs  level_shifting.rs  logging.rs  mod.rs  mulliken.rs
tincr-core/src/scc/mixer/: broyden.rs  mod.rs
tincr-core/src/types/: atom.rs  atomic_orbital.rs  elements.rs  mod.rs  molecular_orbital.rs  pseudo_atom.rs  spline.rs  system.rs
tincr-core/src/utils/: array_helper.rs  mod.rs  tests.rs  zbrent.rs
(+113 files in other folders)
