[package]
name = "tincr-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusty-fitpack = { git = "https://github.com/mitric-lab/Rusty-FITPACK.git"}
chemfiles = "0.10"
ndarray = {version = "0.15.3", features = ["serde-1", "approx", "rayon"]}
ndarray-npy = "0.8"
approx = "0.3.2"
ndarray-linalg = { version = "0.14", features = ["intel-mkl-system"]}
ndarray-stats = "0.5"
phf = { version = "0.10.0", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
itertools = "0.10"
petgraph = "0.6"
nalgebra = "0.29"
clap = "3.0.0-beta.5"
toml = "0.5"
log = "0.4"
soa_derive = "0.10.0"
hashbrown = {version = "0.11.2", features = ["serde"]}
derive_builder = "0.10.2"
chrono = "0.4"
libm = "0.2.1"
ron = "0.7"
rayon = "1.5.1"
num-traits = "0.2.14"
